tests/compiler/errors/import_in_function.casa
# expect: INVALID_SCOPE
fn foo {
    import "std"
}
